--- a/src/views/store/cart.ejs
+++ b/src/views/store/cart.ejs
@@ -16,7 +16,12 @@
                 <div class="section-title"><br>
                     <h3 class="title">Carrito</h3>
                 </div>
-                <span class="text-muted" id="cart-items-count">0 items</span>
+
+                    <div class="cart-header">
+                        <span class="text-muted" id="cart-items-count">0 items</span>
+                        <div id="clear-cart-container"></div>
+                    </div>
+
                 <div id="cart-items-container">
                     <p>No hay productos en el carrito.</p>
                 </div>
