--- a/src/views/store/fav.ejs
+++ b/src/views/store/fav.ejs
@@ -1,8 +1,5 @@
 <%- include('../partials/header.ejs') %>
 
-
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -17,11 +14,15 @@
 <body>
     <div class="container mt-5">
         <div class="row">
-            <div class="col-md-8">
                 <div class="section-title"><br>
                     <h3 class="title">Lista de deseos</h3>
                 </div>
-                <span class="text-muted" id="fav-items-count">0 items</span>
+
+                <div class="fav-header">
+                    <span class="text-muted" id="fav-items-count">0 items</span>
+                    <div id="clear-fav-container"></div>
+                </div>
+
                 <div id="fav-items-container">
                     <p>No hay productos en tu lista de deseos.</p>
                 </div>
