--- a/src/views/store/fav.ejs
+++ b/src/views/store/fav.ejs
@@ -7,8 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
     <link rel="stylesheet" href="/css/toastify.css">
     <link rel="stylesheet" href="/css/fav.css">
+    <link rel="stylesheet" href="/css/sweetalert2.css">
+
 </head>
 
 <body>
@@ -96,6 +99,7 @@
     
 </body>
     <script src="/js/favView.js" type="module"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 	<script src="https://unpkg.com/feather-icons"></script>
 </html>
