--- a/src/views/store/fav.ejs
+++ b/src/views/store/fav.ejs
@@ -16,20 +16,16 @@
 
 <body>
     <div class="container mt-5">
-        <div class="row">
-                <div class="section-title"><br>
-                    <h3 class="title">Lista de deseos</h3>
-                </div>
-
-                <div class="fav-header">
-                    <span class="text-muted" id="fav-items-count">0 items</span>
-                    <div id="clear-fav-container"></div>
-                </div>
-
-                <div id="fav-items-container">
-                    <p>No hay productos en tu lista de deseos.</p>
-                </div>
-            </div>
+        <div class="fav-title"><br>
+            <h3 class="title">Lista de deseos</h3>
+        </div>
+    
+        <div class="fav-header">
+            <span id="fav-items-count"></span>
+            <div id="clear-fav-container"></div>
+        </div>
+    
+        <div id="fav-items-container">
         </div>
     </div>
     <br><br><br><br>
