--- a/src/views/comparison/comparison.ejs
+++ b/src/views/comparison/comparison.ejs
@@ -28,7 +28,9 @@
                 <i class="fa fa-search"></i>
               </div>
             </div>
-            <button type="submit" class="search-comparison-btn">Comparar</button>
+            <button type="submit" class="search-comparison-btn">
+              <i class="fa-solid fa-arrow-right-arrow-left"></i> Comparar
+            </button>
           </div>
           <div id="selected-devices" class="selected-devices-container"></div>
           <input type="hidden" id="mobile-ids" name="mobileIds">
