--- a/public/css/orderDetails.css
+++ b/public/css/orderDetails.css
@@ -76,13 +76,6 @@
     box-sizing: border-box;
 }
 
-@media (min-width: 768px) {
-    .col-md-6-details {
-        flex: 0 0 50%;
-        max-width: 50%;
-    }
-}
-
 .Information-details {
     margin-bottom: 10px;
     color: #666;
@@ -109,11 +102,6 @@
 .badge-success-details {
     background-color: #28a745;
 }
-
-/* .badge-warning-details {
-    background-color: #ffc107;
-    color: #333;
-} */
 
 .table-details {
     width: 100%;
@@ -155,7 +143,9 @@
 }
 
 .btn-details {
-    display: inline-block;
+    display: block;
+    width: fit-content;
+    margin: 1.5rem auto 0;
     font-weight: 400;
     color: #fff;
     text-align: center;
@@ -174,15 +164,16 @@
 .btn-details:hover {
     background-color: #0056b3;
     border-color: #0056b3;
+    color: #fff;
     box-shadow: 0 6px 12px rgba(0, 123, 255, 0.3);
+    transform: translateY(-3px);
 }
 
-.btn-details {
-    margin-top: 1.5rem;
-    display: block;
-    width: fit-content;
-    margin-left: auto;
-    margin-right: auto;
+@media (min-width: 768px) {
+    .col-md-6-details {
+        flex: 0 0 50%;
+        max-width: 50%;
+    }
 }
 
 @media (max-width: 575.98px) {
