--- a/src/views/profile/account.ejs
+++ b/src/views/profile/account.ejs
@@ -49,7 +49,7 @@
 
         <div class="contenedor-acciones">
           <button class="cancelar modal-btn" onclick="closeModal()">Cancelar</button>
-          <button class="guardar modal-btn" type="submit" form="modal-form">Guardar</button>
+          <button class="guardar modal-btn" type="submit" form="modal-form">Enviar</button>
         </div>
       </div>
     </div>
