--- a/src/views/admin/productos.ejs
+++ b/src/views/admin/productos.ejs
@@ -27,6 +27,7 @@
                                 <th>Categoría</th>
                                 <th>Marca</th>
                                 <th>Fecha</th>
+                                <th>Acciones</th>
                             </tr>
                         </thead>
                         <tbody id="productsTableBody">
