--- a/src/views/admin/usuarios.ejs
+++ b/src/views/admin/usuarios.ejs
@@ -1,26 +1,30 @@
-  <%- include('../admin/dashboard.ejs') %>
+<%- include('../admin/dashboard.ejs') %>
 
-<main class="main-content-area">
-            <div class="card">
-                <div class="card-header">
-                    <h2>Lista de Usuarios</h2>
-                </div>
-
-                <div class="table-container">
-                    <table class="product-table">
-                        <thead>
-                            <tr>
-                                <th>Nombre de usuario</th>
-                                <th>Correo</th>
-                                <th>Fecha</th>
-                                <th>Estado</th>
-                            </tr>
-                        </thead>
-                        <tbody id="productsTableBody">
-                        </tbody>
-                    </table>
-                </div>
+<div class="main-content">
+    <header class="header">
+        <h1>Gestión de Usuarios</h1>
+    </header>
+    <main class="main-content-area">
+        <div class="card">
+            <div class="card-header">
+                <h2>Lista de Usuarios</h2>
             </div>
-        </main>
 
-<script src="/js/adminUsers.js"></script>
+            <div class="table-container">
+                <table class="product-table">
+                    <thead>
+                        <tr>
+                            <th>Nombre de usuario</th>
+                            <th>Correo</th>
+                            <th>Fecha</th>
+                            <th>Estado</th>
+                        </tr>
+                    </thead>
+                    <tbody id="productsTableBody">
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </main>
+
+    <script src="/js/adminUsers.js"></script>
