--- a/src/views/admin/accounts.ejs
+++ b/src/views/admin/accounts.ejs
@@ -1,5 +1,5 @@
 <%- include('../admin/dashboard.ejs') %>
-
+  
 <div class="main-content">
   <header class="header">
     <h1>Gestión de Administradores</h1>
@@ -21,10 +21,10 @@
         <table class="product-table">
           <thead>
             <tr>
-              <th>Nombre de Usuario</th>
-              <th>Fecha de Creación</th>
-              <th>Estado</th>
-              <th>Acciones</th>
+              <th style="width: 30%">Nombre de Usuario</th>
+              <th style="width: 30%">Fecha de Creación</th>
+              <th style="width: 30%">Estado</th>
+              <th style="width: 10%">Acciones</th>
             </tr>
           </thead>
           <tbody id="adminTableBody">
