--- a/src/views/admin/usuarios.ejs
+++ b/src/views/admin/usuarios.ejs
@@ -14,10 +14,10 @@
                 <table class="product-table">
                     <thead>
                         <tr>
-                            <th>Nombre de usuario</th>
-                            <th>Correo</th>
-                            <th>Fecha</th>
-                            <th>Estado</th>
+                            <th style="width: 30%">Nombre de usuario</th>
+                            <th style="width: 30%">Correo</th>
+                            <th style="width: 30%">Fecha de creación</th>
+                            <th style="width: 10%">Estado</th>
                         </tr>
                     </thead>
                     <tbody id="productsTableBody">
