--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -452,7 +452,7 @@ document.querySelector(".tablink").click();
          <div class="row"> 
             <div class="col-md-12">
                 <div class="section-title text-center">
-                    <h3 class="title">Recomendados</h3>
+                    <h3 class="title">Descubre más opciones</h3>
                 </div>
             </div>
             <% if (recomendados && recomendados.length> 0) { %>
@@ -532,7 +532,7 @@ document.querySelector(".tablink").click();
                                 </div>
                                 <!-- /Section -->
 
-        <%- include('./partials/footer.ejs') %>
+<%- include('./partials/footer.ejs') %>
         
 </body>
 
