--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -176,11 +176,11 @@
 			<div id="responsive-nav">
 				<!-- NAV -->
 				<ul class="main-nav nav navbar-nav">
-					<li class="active"><a href="/">Inicio</a></li>
-					<li><a href="/store">Productos</a></li>
-					<li><a href="/comparison">Comparalos</a></li>
-					<li><a href="/contact">Contactanos</a></li>
-					<li><a href="/about">Sobre nosotros</a></li>
+					<li class="<%= req.originalUrl === '/' ? 'active' : '' %>"><a href="/">Inicio</a></li>
+                    <li class="<%= req.originalUrl === '/store' ? 'active' : '' %>"><a href="/store">Productos</a></li>
+                    <li class="<%= req.originalUrl === '/comparison' ? 'active' : '' %>"><a href="/comparison">Comparalos</a></li>
+                    <li class="<%= req.originalUrl === '/contact' ? 'active' : '' %>"><a href="/contact">Contactanos</a></li>
+                    <li class="<%= req.originalUrl === '/about' ? 'active' : '' %>"><a href="/about">Sobre nosotros</a></li>
 					</ul>
 				</ul>
 				<!-- /NAV -->
