--- a/src/views/store/about.ejs
+++ b/src/views/store/about.ejs
@@ -1,4 +1,4 @@
-<%- include('../partials/header.ejs') %>
+<%- include('../partials/header.ejs', {req}) %>
 
  <!-- About -->
  <link type="text/css" rel="stylesheet" href="/css/about.css" />
