--- a/src/views/admin/dashboard.ejs
+++ b/src/views/admin/dashboard.ejs
@@ -36,7 +36,7 @@
                         <a href="/admin/marcaCategoria"
                             class="<%= req.originalUrl === '/admin/marcaCategoria' ? 'active' : '' %>">
                             <i class="fas fa-tags"></i>
-                            <span>Marcas y Categorias</span>
+                            <span>Marcas y Categorías</span>
                         </a>
                     </li>
                     <li>
