--- a/src/views/admin/marcaCategoria.ejs
+++ b/src/views/admin/marcaCategoria.ejs
@@ -3,6 +3,7 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 <link rel="stylesheet" href="/css/sweetAlertAdmin.css">
 <link rel="stylesheet" href="/css/toastify.css">
+<link rel="stylesheet" href="/css/adminTable.css">
 
 <div class="main-content">
     <header class="header">
@@ -87,7 +88,7 @@
 
             <div >
                 <label>Categorías Asociadas:
-                <div id="brandCategoriesCheckboxes"></div>
+                <div id="brandCategoriesCheckboxes" style="margin-top: 8px;"></div>
             </div>
 
             <div class="modal-buttons">
@@ -130,6 +131,14 @@
         </form>
     </div>
 </div>
+
+<style>
+input[type="checkbox"] {
+    width: auto;
+    margin-right: 5px;
+    transform: scale(1.2);
+}
+</style>
 
 </body>
 
