--- a/src/views/admin/productos.ejs
+++ b/src/views/admin/productos.ejs
@@ -3,6 +3,7 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 <link rel="stylesheet" href="/css/sweetAlertAdmin.css">
 <link rel="stylesheet" href="/css/toastify.css">
+<link rel="stylesheet" href="/css/adminTable.css">
 
     <div class="main-content">
         <header class="header">
@@ -52,7 +53,7 @@
                 </div>
                 <div class="form-group">
                     <label for="product">Descripción:</label>
-                    <input type="text" id="productoDescripcion" required>
+                    <textarea id="productoDescripcion" required></textarea>
                 </div>
                 <div class="form-group">
                     <label for="productPrice">Precio:</label>
