--- a/src/views/admin/usuarios.ejs
+++ b/src/views/admin/usuarios.ejs
@@ -1,5 +1,8 @@
 <%- include('../admin/dashboard.ejs') %>
 
+<link rel="stylesheet" href="/css/adminTable.css">
+<link rel="stylesheet" href="/css/state.css">
+
 <div class="main-content">
     <header class="header">
         <h1>Gestión de Usuarios</h1>
