--- a/src/views/admin/accounts.ejs
+++ b/src/views/admin/accounts.ejs
@@ -1,5 +1,10 @@
 <%- include('../admin/dashboard.ejs') %>
-  
+
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+<link rel="stylesheet" href="/css/toastify.css">
+<link rel="stylesheet" href="/css/adminTable.css">
+<link rel="stylesheet" href="/css/state.css">
+
 <div class="main-content">
   <header class="header">
     <h1>Gestión de Administradores</h1>
@@ -45,7 +50,7 @@
         <input type="text" id="username" required>
       </div>
       <div class="form-group">
-        <label for="password">Contraseña:</label>
+        <label for="password">Contraseña(opcional):</label>
         <input type="password" id="password">
       </div>
       <div class="modal-buttons">
@@ -60,4 +65,6 @@
   </div>
 </div>
 
-<script src="/js/adminAccounts.js"></script>
+<script type="module" src="/js/adminAccounts.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+<script src="https://unpkg.com/feather-icons"></script>
