--- a/src/views/admin/variantes.ejs
+++ b/src/views/admin/variantes.ejs
@@ -3,6 +3,7 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 <link rel="stylesheet" href="/css/sweetAlertAdmin.css">
 <link rel="stylesheet" href="/css/toastify.css">
+<link rel="stylesheet" href="/css/adminTable.css">
 
   <div class="main-content">
     <header class="header">
@@ -38,7 +39,6 @@
         </div>
       </div>
     </div>
-      
 
       <div id="varianteModal" class="modal-overlay">
         <div class="modal-content">
