--- a/public/css/account.css
+++ b/public/css/account.css
@@ -66,7 +66,7 @@
   display: flex;
   position: fixed;
   top: 0; left: 0; right: 0; bottom: 0;
-  background-color: rgba(0, 0, 0, 0.4); /* aparece instantáneamente */
+  background-color: rgba(0, 0, 0, 0.4);
   justify-content: center;
   align-items: center;
   z-index: 999;
@@ -80,7 +80,7 @@
   max-width: 90%;
   text-align: center;
   box-shadow: 0 8px 32px rgba(0,0,0,0.5), 0 1.5px 10px rgba(0,255,255,0.05);
-  animation: fadeIn 0.2s ease-in-out forwards; /* solo aquí */
+  animation: fadeIn 0.2s ease-in-out forwards; 
 }
 
 @keyframes fadeIn {
@@ -155,6 +155,17 @@
   background-color: #ccc;
   cursor: not-allowed;
   opacity: 0.6;
+}
+
+.input-error {
+    border: 1px solid #ff4444 !important;
+}
+
+.modal-form .error-text {
+  text-align: left;
+  color: #ff4444;
+  font-size: 1.3rem;
+  margin-top: -8px; 
 }
 
 @media (max-width: 600px){
