--- a/src/views/admin/accounts.ejs
+++ b/src/views/admin/accounts.ejs
@@ -4,6 +4,7 @@
 <link rel="stylesheet" href="/css/toastify.css">
 <link rel="stylesheet" href="/css/adminTable.css">
 <link rel="stylesheet" href="/css/state.css">
+<link rel="stylesheet" href="/css/error.css">
 
 <div class="main-content">
   <header class="header">
@@ -43,15 +44,19 @@
 <div id="userModal" class="modal-overlay">
   <div class="modal-content">
     <h3 id="modalTitle" class="modal-title">Añadir Administrador</h3>
-    <form id="userForm">
+    <form id="userForm" class="modal-form">
       <input type="hidden" id="userId">
       <div class="form-group">
         <label for="username">Nombre de Usuario:</label>
-        <input type="text" id="username" required>
+        <input type="text" id="username" name="username">
+        <div class="error-text" data-error-for="username"></div>
       </div>
       <div class="form-group">
-        <label for="password">Contraseña(opcional):</label>
-        <input type="password" id="password">
+        <label for="password">
+          Contraseña<span id="passwordOptionalLabel" style="font-weight: normal;"> (opcional)</span>:
+        </label>
+        <input type="password" id="password" name="password" required>
+        <div class="error-text" data-error-for="password"></div>
       </div>
       <div class="modal-buttons">
         <button type="button" id="cancelModalBtn" class="cancel-button">
