--- a/src/views/profile/account.ejs
+++ b/src/views/profile/account.ejs
@@ -1,8 +1,8 @@
 <%- include('../partials/header.ejs') %>
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="stylesheet" href="/css/toastify.css">
     <link type="text/css" rel="stylesheet" href="/css/account.css"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 
   <body>
     <div class="contenedor-account">
@@ -40,7 +40,7 @@
       <div id="modal-content" class="modal-contenido">
         <h2 id="modal-title" class="modal-titulo"></h2>
         <div id="verification-message" class="verification-message" style="display:none;"></div>
-        <form id="modal-form"></form>
+        <form id="modal-form" class="modal-form"></form>
 
         <div class="contenedor-reenviar">
           <button class="reenviar modal-btn" id="resend-code-btn" style="display:none;" type="button">Reenviar
@@ -53,7 +53,6 @@
         </div>
       </div>
     </div>
-
   </body>
 
       <script src="/js/userProfile.js" type="module"></script>
